# sudoku

sudoku.py/: pyproject.toml
sudoku.py/sudoku_py/: __init__.py
sudoku.py/tests/: test_possible.py  test_solve.py
